<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical"
    android:padding="45dp"
    tools:context="smktelkom_mlg.macitourapp.SignUp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Create Account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/logosplash" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawablePadding="14dp"
        android:ems="10"
        android:hint="@string/urname"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:drawablePadding="14dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_account_circle_white_24dp"
        android:drawablePadding="14dp"
        android:ems="10"
        android:hint="@string/uname"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/etConfPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="14dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/conf"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffff"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary" />
</LinearLayout>
